--- a/index.html
+++ b/index.html
@@ -1,14 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Florentine Felicitas Draeger</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-</head>
-
-<body>
-    <h1 class="text-info">Hello World</h1>
-</body>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="body">
+    <div class="container">
+      <header class="tops row d-flex align-items-center">
+        <div class="col-sm-12 col-md-6">
+          <h1 style="padding:20px;" class="m-2 text-light">
+            Florentine Felicitas
+          </h1>
+        </div>
+        <nav class="nav justify-content-md-end col-sm-12 col-md-6">
+          <a href="#contact" class="ml-2 nav-link active text-light">Contact</a>
+          <a href="#curriculumVitae" class="ml-2 nav-link active text-light"
+            >CV</a
+          >
+          <a href="#socialMedia" class="nav-link active text-light"
+            >Social Media
+          </a>
+        </nav>
+      </header>
+    </div>
+    <main class="intro container">
+      <div class="row d-flex align-item-center">
+        <div class="col-sm-12 col-md-6">
+          <img
+            style="height: auto"
+            class="img-fluid"
+            src="images/hollyandi.JPG"
+            alt="Holly and I at pisco beach."
+          />
+          <p class="mt-2 text-light">
+            <b>Welcometo my website.</b> Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Maxime repudiandae fuga ratione suscipit velit ea
+            dolores, quasi et voluptatem reprehenderit libero a distinctio
+            recusandae error earum at consectetur illum laborum?
+          </p>
+        </div>
+        <div class="skills col-sm-12 col-md-6 text-light">
+          <h4>Coding Skills:</h4>
+          <span class="badge badge-pill badge-light">Python</span>
+          <span class="badge badge-pill badge-light">SQL</span>
+          <span class="badge badge-pill badge-light">'HTML'</span>
+          <span class="badge badge-pill badge-light">JavaScript</span>
+          <span class="badge badge-pill badge-light">CSS</span>
+          <h4 class="mt-3">Languages:</h4>
+          <span class="badge badge-pill badge-light">English</span>
+          <span class="badge badge-pill badge-light">German</span>
+          <span class="badge badge-pill badge-light">Spanish</span>
+          <h4 class="mt-3">Interests:</h4>
+          <span class="badge badge-pill badge-light">Feminism</span>
+          <span class="badge badge-pill badge-light">Travel</span>
+          <span class="badge badge-pill badge-light">Literature</span>
+          <span class="badge badge-pill badge-light">Music</span>
+        </div>
+      </div>
+      <div class="container">
+        <div id="contact" class=" row text-light">
+          <address class="address col-sm-12 col-md-6 mt-4">
+            <a class="address" href="tel:015222481353">Mobile: 01522 2481353</a>
+          </address>
+          <address class="address col-sm-12 col-md-6 mt-4">
+            <a class="address" href="mailto:florentine.felicitas@icloud.com "
+              >Email: florentine.felicitas@icloud.com</a
+            >
+          </address>
+        </div>
+        <div id="socialMedia" class="row">
+          <div
+            class="firstlink col-sm-12 col-md-4 mb-5 mt-5 d-flex justify-content-center"
+          >
+            <div class="card" style="width: 12rem;">
+              <img
+                src="images/linkedin-icon (1).svg"
+                class="card-img-top img-fluid"
+                alt="LinkedIn"
+                style="max-height: 12rem; max-width:12rem"
+              />
+              <div class="card-body">
+                <a class="card-text text-dark" href="https://linkedin.com"
+                  ><span class="badge badge-pill badge-dark"
+                    >Find me on LinkedIn</span
+                  ></a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="secondlink col-sm-12 col-md-4 mb-5 mt-5 d-flex justify-content-center"
+          >
+            <div class="card">
+              <img
+                src="images/github-icon (2).svg"
+                class="card-img-top"
+                alt="GitHub"
+                style="max-height: 12rem; max-width:12rem"
+              />
+              <div class="card-body">
+                <a
+                  class="card-text text-dark"
+                  href="https://github.com/pwrpuffgrl"
+                  ><span class="badge badge-pill badge-dark"
+                    >Find me on Github</span
+                  ></a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="thirdlink col-sm-12 col-md-4 mb-5 mt-5 d-flex justify-content-center"
+          >
+            <div class="card" style="width: 12rem">
+              <img
+                src="images/xing-icon (1).svg"
+                class="card-img-top"
+                alt="Xing"
+                style="max-height: 12rem; max-width:12rem"
+              />
+              <div class="card-body">
+                <a class="card-text text-dark" href="https://xing.com"
+                  ><span class="badge badge-pill badge-dark"
+                    >Find me on Xing</span
+                  ></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row text-light">
+          <div class="aboutMe col-sm-12 col-md-6">
+            <h3>About Me</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos, sapiente tempora ab similique quidem nemo deleniti
+              officia? Ipsum, corrupti suscipit. Est dolorem incidunt expedita
+              consequuntur doloremque quod sed nisi soluta? Lorem ipsum dolor
+              sit amet consectetur adipisicing elit. Vel aperiam itaque ab
+              quidem minus molestias explicabo deleniti consequuntur ad nostrum
+              facilis velit, a eos, libero dolor repellendus exercitationem
+              repellat optio.
+            </p>
+          </div>
+          <div id="curriculumVitae" class="col-sm-12 col-md-6">
+            <table class="table text-light">
+              <h3 class="text-light">Curriculum Vitae</h3>
+              <thead>
+                <tr>
+                  <th scope="col" class="text-light">Year</th>
+                  <th scope="col" class="text-light">Company</th>
+                  <th scope="col" class="text-light">Position</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row" class="text-light">2018</th>
+                  <td>Google</td>
+                  <td>CFO</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="text-light">2016</th>
+                  <td>Facebook</td>
+                  <td>CTO</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="text-light">2012</th>
+                  <td>Twitter</td>
+                  <td>Intern</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div id="carouselExampleControls" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="images/sanmon.JPG"
+                    class="d-block w-100"
+                    alt="santa monica"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/venice.JPG"
+                    class="d-block w-100"
+                    alt="venice beach"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/sanfran.JPG"
+                    class="d-block w-100"
+                    alt="san francisco"
+                  />
+                </div>
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#carouselExampleControls"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExampleControls"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <div class="container">
+      <div class="row bottom" style="padding:20px;">
+        <div class="col-sm-12">
+          <footer>
+            <nav class="navbar d-flex justify-content-between navbar-expand-lg">
+              <img
+                style="height:70px"
+                src="images/Screen Shot 2019-06-06 at 9.34.18 PM.png"
+                alt="mylogo"
+              />
+              <a href="#" class="buttontop btn" role="button">Top</a>
+            </nav>
+          </footer>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
