--- a/index.html
+++ b/index.html
@@ -237,21 +237,43 @@
               </a>
             </div>
           </div>
+          <div class="col-12 col-md-6 text-light mt-3">
+            <h3>Random Stuff</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed et
+              itaque aliquam iure illo impedit cupiditate fuga laboriosam,
+              provident accusantium ut nisi blanditiis, voluptate sit quaerat,
+              fugit tempore libero culpa.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+              dolorum molestias molestiae excepturi hic eveniet quis veritatis
+              aliquid quibusdam facilis repudiandae adipisci aliquam, pariatur
+              quidem expedita voluptate magni libero deleniti?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+              dolorum molestias molestiae excepturi hic eveniet quis veritatis
+              aliquid quibusdam facilis repudiandae adipisci aliquam, pariatur
+              quidem expedita voluptate magni libero deleniti?
+            </p>
+          </div>
         </div>
       </div>
     </main>
     <div class="container">
       <div class="row bottom" style="padding:20px;">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
           <footer>
-            <nav class="navbar d-flex justify-content-between navbar-expand-lg">
-              <img
-                style="height:70px"
-                src="images/Screen Shot 2019-06-06 at 9.34.18 PM.png"
-                alt="mylogo"
-              />
-              <a href="#" class="buttontop btn" role="button">Top</a>
-            </nav>
+            <img
+              style="height:70px"
+              src="images/Screen Shot 2019-06-06 at 9.34.18 PM.png"
+              alt="mylogo"
+            />
+          </div>
+          <div class="col-sm-6 d-flex justify-content-end">
+            <a href="#" class="buttontop btn" role="button">Top</a>
+          </div>
           </footer>
         </div>
       </div>
