--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </main>
     <div class="container">
       <div class="row bottom" style="padding:20px;">
-        <div class="col-sm-6">
+        <div class="col-xs-6">
           <footer>
             <img
               style="height:70px"
@@ -271,7 +271,7 @@
               alt="mylogo"
             />
           </div>
-          <div class="col-sm-6 d-flex justify-content-end">
+          <div class="col-xs-6 d-flex justify-content-end">
             <a href="#" class="buttontop btn" role="button">Top</a>
           </div>
           </footer>
